# esp-hosted

./: .codespellrc  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  ota_feature.md  slave_config.proto
fg/host/: CMakeLists.txt  README.md
fg/host/components/eh_host_rpc_lib/: CMakeLists.txt  Makefile
fg/host/components/eh_host_rpc_lib/include/: ctrl_api.h  serial_if.h
fg/host/components/eh_host_rpc_lib/src/: ctrl_core.c
fg/host/components/eh_host_transport/: CMakeLists.txt  Kconfig  README.md
fg/host/components/eh_host_transport/include/: eh_host_transport.h  eh_host_transport_api.h  eh_host_transport_direct.h  eh_host_transport_mcu_ops.h
fg/host/components/eh_host_transport/src/: eh_host_transport.c
fg/host/components/eh_proto_linux_v1/: CMakeLists.txt  README.md
fg/host/components/eh_proto_linux_v1/include/: esp_hosted_config.pb-c.h  esp_hosted_cp_lin_fg_pbuf.h
fg/host/components/eh_proto_linux_v1/src/: esp_hosted_config.pb-c.c
fg/host/components/esp_queue/: CMakeLists.txt
fg/host/linux/kmod/: Makefile
fg/host/linux/kmod/include/: eh_host_transport_linux_ops.h  esp.h  esp_api.h  esp_fw_verify.h  esp_if.h  esp_kernel_port.h  esp_log.h  esp_rb.h  esp_serial.h  esp_stats.h
fg/host/linux/kmod/src/: eh_host_transport_linux_impl.c  esp_bt.c  esp_fw_verify.c  esp_rb.c  esp_serial.c  esp_stats.c  main.c
fg/host/linux/scripts/: c_app_build.sh  esp_kmod_up.sh  py_app_build.sh
fg/host/linux/user_space/c_demo_app/: CMakeLists.txt  Makefile  app_custom_rpc.c  app_custom_rpc.h  app_peer_data_transfer.c  app_peer_data_transfer.h  eh_host_ext_peer_data_transfer.c  hosted_shell.c  nw_helper_func.c  nw_helper_func.h  test.c  test.h  test_utils.c
fg/host/linux/user_space/python_demo_app/: CMakeLists.txt  Makefile  commands_lib.py  commands_map_py_to_c.py  hosted_py_header.py  stress.py  test.py
host/csk_porting/esp-hosted/: CMakeLists.txt  Kconfig
host/csk_porting/esp-hosted/csk/common/: common.h  trace.h  util.c  util.h
modules/common/: CMakeLists.txt
modules/common/eh_common/: CMakeLists.txt  Kconfig.ext
modules/common/eh_common/include/: eh_common.h  eh_common_caps.h  eh_common_fw_version.h  eh_common_header.h  eh_common_header_v2.h  eh_common_interface.h  eh_common_log.h  eh_common_tlv.h  eh_rpc_id_map_v1.h  eh_rpc_id_map_v2.h
modules/common/eh_common/src/: eh_common_stub.c
modules/common/eh_frame/: CMakeLists.txt
modules/common/eh_frame/include/: eh_frame.h
modules/common/eh_frame/src/: eh_frame.c
modules/common/eh_frame/test/: Makefile  README.md  frame_test.c
modules/common/eh_mempool/: CMakeLists.txt
modules/common/eh_mempool/include/: eh_mempool.h  eh_mempool_ll.h
modules/common/eh_mempool/src/: eh_mempool.c  eh_mempool_ll.c
modules/common/eh_tlv/: CMakeLists.txt  Kconfig.ext
modules/common/eh_tlv/include/: eh_tlv.h  eh_tlv_defs.h  eh_tlv_v1_linux.h  eh_tlv_v1_mcu.h  eh_tlv_v2.h
modules/common/serializers/eh_proto_linux_v1/: CMakeLists.txt
modules/common/serializers/eh_proto_linux_v1/include/: eh_config.pb-c.h  eh_cp_feat_rpc_ext_linux_pbuf.h
modules/common/serializers/eh_proto_linux_v1/src/: eh_config.pb-c.c  eh_proto_linux_v1_stub.c  eh_rpc_id_map_v1_fg_asserts.c
modules/common/serializers/eh_proto_mcu_v1/: CMakeLists.txt
modules/common/serializers/eh_proto_mcu_v1/include/: eh_cp_feat_rpc_ext_mcu_pbuf.h  eh_rpc.pb-c.h
modules/common/serializers/eh_proto_v2/: CMakeLists.txt
modules/common/test/: Makefile  registry_test.c
modules/coprocessor/: CMakeLists.txt  Kconfig.ext  eh_cp_feat_descs.ld
modules/coprocessor/eh_cp_core/: CMakeLists.txt  Kconfig  Kconfig.ext
modules/coprocessor/eh_cp_core/include/: eh_cp.h  eh_cp_core.h  eh_cp_event.h  eh_cp_ext_dep_enforce.h  eh_cp_idf_compat.h  eh_cp_linker_tags.h  eh_cp_master_config.h  eh_cp_transport_test.h  eh_cp_utils.h  eh_log.h
modules/coprocessor/eh_cp_core/src/: eh_cp_core.c  eh_cp_event_base.c  eh_cp_registries.c  eh_cp_transport_test.c  eh_cp_utils.c
modules/coprocessor/eh_cp_transport/: CMakeLists.txt  Kconfig  Kconfig.cp.sdio  Kconfig.cp.spi  Kconfig.cp.spi_hd  Kconfig.cp.uart  Kconfig.ext
modules/coprocessor/eh_cp_transport/include/: eh_cp_transport_gpio_pin_guard.h  eh_transport_cp.h
modules/coprocessor/eh_cp_transport/private_include/: sdio_slave_api.h
modules/coprocessor/eh_cp_transport/src/: eh_cp_transport_gpio_pin_guard.c  eh_cp_transport_sdio.c  eh_cp_transport_spi.c  eh_cp_transport_spi_hd.c  eh_cp_transport_uart.c
modules/coprocessor/features/eh_cp_feat_bt/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_cli/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_ext_coex/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_gpio_exp/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_host_ps/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_light_sleep/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_mem_monitor/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_nw_split/: CMakeLists.txt  Kconfig.ext  eh_cp_feat_nw_split_lwip_hook.h
modules/coprocessor/features/eh_cp_feat_peer_data/: CMakeLists.txt  Kconfig  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_rpc/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_rpc_ext_linux/: CMakeLists.txt  Kconfig.ext  README.md
modules/coprocessor/features/eh_cp_feat_rpc_ext_mcu/: CMakeLists.txt  Kconfig  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_system/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_wifi/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_wifi_ext_dpp/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_wifi_ext_ent/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/eh_cp_feat_wifi_ext_itwt/: CMakeLists.txt  Kconfig.ext
modules/coprocessor/features/test/: Makefile  extension_test.c  registry_test.c  system_test.c
(+1411 files in other folders)
