if(CONFIG_ESP_HOSTED_CP)
    # Transport
    add_subdirectory(eh_cp_transport ${CMAKE_BINARY_DIR}/eh_cp_transport)
    target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_transport)

    # Extensions (pilot first: nw_split)
    if(CONFIG_ESP_HOSTED_CP_FEAT_RPC_READY)
        add_subdirectory(features/eh_cp_feat_rpc ${CMAKE_BINARY_DIR}/eh_cp_feat_rpc)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_rpc)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_rpc_set_endpoints")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_HOST_PS_READY)
        add_subdirectory(features/eh_cp_feat_host_ps ${CMAKE_BINARY_DIR}/eh_cp_feat_host_ps)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_host_ps)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_host_ps_cp__init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_SYSTEM_READY)
        add_subdirectory(features/eh_cp_feat_system ${CMAKE_BINARY_DIR}/eh_cp_feat_system)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_system)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_system_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_NW_SPLIT_READY)
        add_subdirectory(features/eh_cp_feat_nw_split ${CMAKE_BINARY_DIR}/eh_cp_feat_nw_split)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_nw_split)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_nw_split_init")
        # Cross-feature dep: nw_split → host_ps (checks is_host_power_saving)
        if(TARGET eh_cp_feat_host_ps)
            target_link_libraries(eh_cp_feat_nw_split PUBLIC eh_cp_feat_host_ps)
        endif()
        # Cross-feature dep: nw_split → wifi (connect state + helpers)
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_READY AND TARGET eh_cp_feat_wifi)
            target_link_libraries(eh_cp_feat_nw_split PUBLIC eh_cp_feat_wifi)
        endif()
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_CLI_READY)
        add_subdirectory(features/eh_cp_feat_cli ${CMAKE_BINARY_DIR}/eh_cp_feat_cli)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_cli)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_cli_register_commands")
        # Cross-feature dep: CLI → host_ps (for wake-up command)
        if(CONFIG_ESP_HOSTED_CP_FEAT_HOST_PS_READY)
            target_link_libraries(eh_cp_feat_cli PUBLIC eh_cp_feat_host_ps)
        endif()
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_PEER_DATA_TRANSFER_READY)
        add_subdirectory(features/eh_cp_feat_peer_data ${CMAKE_BINARY_DIR}/eh_cp_feat_peer_data)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_peer_data)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_peer_data_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_RPC_LINUX_READY)
        add_subdirectory(features/eh_cp_feat_rpc_ext_linux ${CMAKE_BINARY_DIR}/eh_cp_feat_rpc_ext_linux)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_rpc_ext_linux)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_rpc_ext_linux_init")
        if(CONFIG_ESP_HOSTED_CP_FEAT_PEER_DATA_TRANSFER_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_linux PUBLIC eh_cp_feat_peer_data)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_linux PUBLIC eh_cp_feat_wifi)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_BT_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_linux PUBLIC eh_cp_feat_bt)
        endif()
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_RPC_MCU_READY)
        add_subdirectory(features/eh_cp_feat_rpc_ext_mcu ${CMAKE_BINARY_DIR}/eh_cp_feat_rpc_ext_mcu)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_rpc_ext_mcu)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_rpc_ext_mcu_init")
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_wifi)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_ENT_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_wifi_ext_ent)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_ITWT_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_wifi_ext_itwt)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_DPP_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_wifi_ext_dpp)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_BT_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_bt)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_GPIO_EXP_READY)
            target_link_libraries(eh_cp_feat_rpc_ext_mcu PUBLIC eh_cp_feat_gpio_exp)
        endif()
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_READY)
        add_subdirectory(features/eh_cp_feat_wifi ${CMAKE_BINARY_DIR}/eh_cp_feat_wifi)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_wifi)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_wifi_init")
        # Sub-extensions linked into parent WiFi feature (lifecycle managed by parent)
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_ENT_READY)
            add_subdirectory(features/eh_cp_feat_wifi_ext_ent ${CMAKE_BINARY_DIR}/eh_cp_feat_wifi_ext_ent)
            target_link_libraries(eh_cp_feat_wifi PUBLIC eh_cp_feat_wifi_ext_ent)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_ITWT_READY)
            add_subdirectory(features/eh_cp_feat_wifi_ext_itwt ${CMAKE_BINARY_DIR}/eh_cp_feat_wifi_ext_itwt)
            target_link_libraries(eh_cp_feat_wifi PUBLIC eh_cp_feat_wifi_ext_itwt)
        endif()
        if(CONFIG_ESP_HOSTED_CP_FEAT_WIFI_EXT_DPP_READY)
            add_subdirectory(features/eh_cp_feat_wifi_ext_dpp ${CMAKE_BINARY_DIR}/eh_cp_feat_wifi_ext_dpp)
            target_link_libraries(eh_cp_feat_wifi PUBLIC eh_cp_feat_wifi_ext_dpp)
        endif()
    endif()

    # Late-bind cross-feature deps: host_ps → wifi/nw_split (wakeup replay)
    if(TARGET eh_cp_feat_host_ps)
        if(TARGET eh_cp_feat_wifi)
            target_link_libraries(eh_cp_feat_host_ps PUBLIC eh_cp_feat_wifi)
        endif()
        if(TARGET eh_cp_feat_nw_split)
            target_link_libraries(eh_cp_feat_host_ps PUBLIC eh_cp_feat_nw_split)
        endif()
    endif()

    # Late-bind cross-feature dep: nw_split → wifi (target may be created after nw_split)
    if(CONFIG_ESP_HOSTED_CP_FEAT_NW_SPLIT_READY AND TARGET eh_cp_feat_nw_split AND
       CONFIG_ESP_HOSTED_CP_FEAT_WIFI_READY AND TARGET eh_cp_feat_wifi)
        target_link_libraries(eh_cp_feat_nw_split PUBLIC eh_cp_feat_wifi)
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_BT_READY)
        add_subdirectory(features/eh_cp_feat_bt ${CMAKE_BINARY_DIR}/eh_cp_feat_bt)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_bt)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_bt_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_GPIO_EXP_READY)
        add_subdirectory(features/eh_cp_feat_gpio_exp ${CMAKE_BINARY_DIR}/eh_cp_feat_gpio_exp)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_gpio_exp)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_gpio_exp_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_MEM_MONITOR_READY)
        add_subdirectory(features/eh_cp_feat_mem_monitor ${CMAKE_BINARY_DIR}/eh_cp_feat_mem_monitor)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_mem_monitor)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_mem_monitor_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_EXT_COEX_READY)
        add_subdirectory(features/eh_cp_feat_ext_coex ${CMAKE_BINARY_DIR}/eh_cp_feat_ext_coex)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_ext_coex)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_ext_coex_init")
    endif()

    if(CONFIG_ESP_HOSTED_CP_FEAT_LIGHT_SLEEP_READY)
        add_subdirectory(features/eh_cp_feat_light_sleep ${CMAKE_BINARY_DIR}/eh_cp_feat_light_sleep)
        target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_feat_light_sleep)
        target_link_options(${COMPONENT_LIB} INTERFACE "-Wl,--undefined=eh_cp_feat_light_sleep_init")
    endif()

    # Core (depends on transport + extensions)
    add_subdirectory(eh_cp_core ${CMAKE_BINARY_DIR}/eh_cp_core)
    target_link_libraries(${COMPONENT_LIB} INTERFACE eh_cp_core)
    target_include_directories(${COMPONENT_LIB} INTERFACE
        "${CMAKE_CURRENT_LIST_DIR}/eh_cp_core/include")
    if(TARGET eh_cp_feat_rpc)
        target_link_libraries(eh_cp_core PUBLIC eh_cp_feat_rpc)
    endif()
    if(TARGET eh_cp_feat_host_ps)
        target_link_libraries(eh_cp_core PUBLIC eh_cp_feat_host_ps)
    endif()
    if(CONFIG_ESP_HOSTED_CP_FEAT_BT_READY)
        target_link_libraries(eh_cp_core PUBLIC eh_cp_feat_bt)
    endif()

    # CP linker script (role-specific)
    target_link_options(${COMPONENT_LIB} INTERFACE
        "-Wl,-T${CMAKE_CURRENT_LIST_DIR}/eh_cp_feat_descs.ld"
    )
endif()
